[DG] - update security